_includes/v21.2/cluster-settings-table.md
{% comment %}
NOTE: This is auto-generated content populated directly from the cockroach binary. Do not edit manually!
      Last auto-generated Thu Jul 21 17:55:37 EDT 2022 | See DOC-5103 for details
{% endcomment %}
<table>
<thead><tr><th>Setting</th><th>Type</th><th>Default</th><th>Description</th></tr></thead>
<tbody>
<tr><td><code><a name="setting-admission-kv-enabled"></a>admission.kv.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when true, work performed by the KV layer is subject to admission control</td></tr>
<tr><td><code><a name="setting-admission-sql_kv_response-enabled"></a>admission.sql_kv_response.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when true, work performed by the SQL layer when receiving a KV response is subject to admission control</td></tr>
<tr><td><code><a name="setting-admission-sql_sql_response-enabled"></a>admission.sql_sql_response.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when true, work performed by the SQL layer when receiving a DistSQL response is subject to admission control</td></tr>
<tr><td><code><a name="setting-bulkio-backup-resolve_destination_in_job-enabled"></a>bulkio.backup.resolve_destination_in_job.enabled</code></td><td>boolean</td><td><code>false</code></td><td>defer the interaction with the external storage used to resolve backup destination until the job starts</td></tr>
<tr><td><code><a name="setting-bulkio-stream_ingestion-minimum_flush_interval"></a>bulkio.stream_ingestion.minimum_flush_interval</code></td><td>duration</td><td><code>5s</code></td><td>the minimum timestamp between flushes; flushes may still occur if internal buffers fill up</td></tr>
<tr><td><code><a name="setting-changefeed-node_throttle_config"></a>changefeed.node_throttle_config</code></td><td>string</td><td><code></code></td><td>specifies node level throttling configuration for all changefeeeds</td></tr>
<tr><td><code><a name="setting-cloudstorage-http-custom_ca"></a>cloudstorage.http.custom_ca</code></td><td>string</td><td><code></code></td><td>custom root CA (appended to system's default CAs) for verifying certificates when interacting with HTTPS storage</td></tr>
<tr><td><code><a name="setting-cloudstorage-timeout"></a>cloudstorage.timeout</code></td><td>duration</td><td><code>10m0s</code></td><td>the timeout for import/export storage operations</td></tr>
<tr><td><code><a name="setting-cluster-organization"></a>cluster.organization</code></td><td>string</td><td><code></code></td><td>organization name</td></tr>
<tr><td><code><a name="setting-cluster-preserve_downgrade_option"></a>cluster.preserve_downgrade_option</code></td><td>string</td><td><code></code></td><td>disable (automatic or manual) cluster version upgrade from the specified version until reset</td></tr>
<tr><td><code><a name="setting-diagnostics-active_query_dumps-enabled"></a>diagnostics.active_query_dumps.enabled</code></td><td>boolean</td><td><code>true</code></td><td>experimental: enable dumping of anonymized active queries to disk when node is under memory pressure</td></tr>
<tr><td><code><a name="setting-diagnostics-forced_sql_stat_reset-interval"></a>diagnostics.forced_sql_stat_reset.interval</code></td><td>duration</td><td><code>2h0m0s</code></td><td>interval after which the reported SQL Stats are reset even if not collected by telemetry reporter. It has a max value of 24H.</td></tr>
<tr><td><code><a name="setting-diagnostics-reporting-enabled"></a>diagnostics.reporting.enabled</code></td><td>boolean</td><td><code>true</code></td><td>enable reporting diagnostic metrics to cockroach labs</td></tr>
<tr><td><code><a name="setting-diagnostics-reporting-interval"></a>diagnostics.reporting.interval</code></td><td>duration</td><td><code>1h0m0s</code></td><td>interval at which diagnostics data should be reported</td></tr>
<tr><td><code><a name="setting-enterprise-license"></a>enterprise.license</code></td><td>string</td><td><code></code></td><td>the encoded cluster license</td></tr>
<tr><td><code><a name="setting-external-graphite-endpoint"></a>external.graphite.endpoint</code></td><td>string</td><td><code></code></td><td>if nonempty, push server metrics to the Graphite or Carbon server at the specified host:port</td></tr>
<tr><td><code><a name="setting-external-graphite-interval"></a>external.graphite.interval</code></td><td>duration</td><td><code>10s</code></td><td>the interval at which metrics are pushed to Graphite (if enabled)</td></tr>
<tr><td><code><a name="setting-feature-backup-enabled"></a>feature.backup.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable backups, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-changefeed-enabled"></a>feature.changefeed.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable changefeeds, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-export-enabled"></a>feature.export.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable exports, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-import-enabled"></a>feature.import.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable imports, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-restore-enabled"></a>feature.restore.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable restore, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-schema_change-enabled"></a>feature.schema_change.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable schema changes, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-feature-stats-enabled"></a>feature.stats.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to true to enable CREATE STATISTICS/ANALYZE, false to disable; default is true</td></tr>
<tr><td><code><a name="setting-jobs-retention_time"></a>jobs.retention_time</code></td><td>duration</td><td><code>336h0m0s</code></td><td>the amount of time to retain records for completed jobs before</td></tr>
<tr><td><code><a name="setting-kv-allocator-load_based_lease_rebalancing-enabled"></a>kv.allocator.load_based_lease_rebalancing.enabled</code></td><td>boolean</td><td><code>true</code></td><td>set to enable rebalancing of range leases based on load and latency</td></tr>
<tr><td><code><a name="setting-kv-allocator-load_based_rebalancing"></a>kv.allocator.load_based_rebalancing</code></td><td>enumeration</td><td><code>leases and replicas</code></td><td>whether to rebalance based on the distribution of QPS across stores [off = 0, leases = 1, leases and replicas = 2]</td></tr>
<tr><td><code><a name="setting-kv-allocator-qps_rebalance_threshold"></a>kv.allocator.qps_rebalance_threshold</code></td><td>float</td><td><code>0.25</code></td><td>minimum fraction away from the mean a store's QPS (such as queries per second) can be before it is considered overfull or underfull</td></tr>
<tr><td><code><a name="setting-kv-allocator-range_rebalance_threshold"></a>kv.allocator.range_rebalance_threshold</code></td><td>float</td><td><code>0.05</code></td><td>minimum fraction away from the mean a store's range count can be before it is considered overfull or underfull</td></tr>
<tr><td><code><a name="setting-kv-bulk_io_write-max_rate"></a>kv.bulk_io_write.max_rate</code></td><td>byte size</td><td><code>1.0 TiB</code></td><td>the rate limit (bytes/sec) to use for writes to disk on behalf of bulk io ops</td></tr>
<tr><td><code><a name="setting-kv-bulk_sst-max_allowed_overage"></a>kv.bulk_sst.max_allowed_overage</code></td><td>byte size</td><td><code>64 MiB</code></td><td>if positive, allowed size in excess of target size for SSTs from export requests; export requests (i.e. BACKUP) may buffer up to the sum of kv.bulk_sst.target_size and kv.bulk_sst.max_allowed_overage in memory</td></tr>
<tr><td><code><a name="setting-kv-bulk_sst-target_size"></a>kv.bulk_sst.target_size</code></td><td>byte size</td><td><code>16 MiB</code></td><td>target size for SSTs emitted from export requests; export requests (i.e. BACKUP) may buffer up to the sum of kv.bulk_sst.target_size and kv.bulk_sst.max_allowed_overage in memory</td></tr>
<tr><td><code><a name="setting-kv-closed_timestamp-follower_reads_enabled"></a>kv.closed_timestamp.follower_reads_enabled</code></td><td>boolean</td><td><code>true</code></td><td>allow (all) replicas to serve consistent historical reads based on closed timestamp information</td></tr>
<tr><td><code><a name="setting-kv-protectedts-reconciliation-interval"></a>kv.protectedts.reconciliation.interval</code></td><td>duration</td><td><code>5m0s</code></td><td>the frequency for reconciling jobs with protected timestamp records</td></tr>
<tr><td><code><a name="setting-kv-range_split-by_load_enabled"></a>kv.range_split.by_load_enabled</code></td><td>boolean</td><td><code>true</code></td><td>allow automatic splits of ranges based on where load is concentrated</td></tr>
<tr><td><code><a name="setting-kv-range_split-load_qps_threshold"></a>kv.range_split.load_qps_threshold</code></td><td>integer</td><td><code>2500</code></td><td>the QPS over which, the range becomes a candidate for load based splitting</td></tr>
<tr><td><code><a name="setting-kv-rangefeed-enabled"></a>kv.rangefeed.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if set, rangefeed registration is enabled</td></tr>
<tr><td><code><a name="setting-kv-replication_reports-interval"></a>kv.replication_reports.interval</code></td><td>duration</td><td><code>1m0s</code></td><td>the frequency for generating the replication_constraint_stats, replication_stats_report and replication_critical_localities reports (set to 0 to disable)</td></tr>
<tr><td><code><a name="setting-kv-snapshot_rebalance-max_rate"></a>kv.snapshot_rebalance.max_rate</code></td><td>byte size</td><td><code>8.0 MiB</code></td><td>the rate limit (bytes/sec) to use for rebalance and upreplication snapshots</td></tr>
<tr><td><code><a name="setting-kv-snapshot_recovery-max_rate"></a>kv.snapshot_recovery.max_rate</code></td><td>byte size</td><td><code>8.0 MiB</code></td><td>the rate limit (bytes/sec) to use for recovery snapshots</td></tr>
<tr><td><code><a name="setting-kv-transaction-max_intents_bytes"></a>kv.transaction.max_intents_bytes</code></td><td>integer</td><td><code>4194304</code></td><td>maximum number of bytes used to track locks in transactions</td></tr>
<tr><td><code><a name="setting-kv-transaction-max_refresh_spans_bytes"></a>kv.transaction.max_refresh_spans_bytes</code></td><td>integer</td><td><code>256000</code></td><td>maximum number of bytes used to track refresh spans in serializable transactions</td></tr>
<tr><td><code><a name="setting-kv-transaction-reject_over_max_intents_budget-enabled"></a>kv.transaction.reject_over_max_intents_budget.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if set, transactions that exceed their lock tracking budget (kv.transaction.max_intents_bytes) are rejected instead of having their lock spans imprecisely compressed</td></tr>
<tr><td><code><a name="setting-schedules-backup-gc_protection-enabled"></a>schedules.backup.gc_protection.enabled</code></td><td>boolean</td><td><code>false</code></td><td>enable chaining of GC protection across backups run as part of a schedule; default is false</td></tr>
<tr><td><code><a name="setting-security-ocsp-mode"></a>security.ocsp.mode</code></td><td>enumeration</td><td><code>off</code></td><td>use OCSP to check whether TLS certificates are revoked. If the OCSP server is unreachable, in strict mode all certificates will be rejected and in lax mode all certificates will be accepted. [off = 0, lax = 1, strict = 2]</td></tr>
<tr><td><code><a name="setting-security-ocsp-timeout"></a>security.ocsp.timeout</code></td><td>duration</td><td><code>3s</code></td><td>timeout before considering the OCSP server unreachable</td></tr>
<tr><td><code><a name="setting-server-auth_log-sql_connections-enabled"></a>server.auth_log.sql_connections.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if set, log SQL client connect and disconnect events (note: may hinder performance on loaded nodes)</td></tr>
<tr><td><code><a name="setting-server-auth_log-sql_sessions-enabled"></a>server.auth_log.sql_sessions.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if set, log SQL session login/disconnection events (note: may hinder performance on loaded nodes)</td></tr>
<tr><td><code><a name="setting-server-authentication_cache-enabled"></a>server.authentication_cache.enabled</code></td><td>boolean</td><td><code>true</code></td><td>enables a cache used during authentication to avoid lookups to system tables when retrieving per-user authentication-related information</td></tr>
<tr><td><code><a name="setting-server-clock-forward_jump_check_enabled"></a>server.clock.forward_jump_check_enabled</code></td><td>boolean</td><td><code>false</code></td><td>if enabled, forward clock jumps &gt max_offset/2 will cause a panic</td></tr>
<tr><td><code><a name="setting-server-clock-persist_upper_bound_interval"></a>server.clock.persist_upper_bound_interval</code></td><td>duration</td><td><code>0s</code></td><td>the interval between persisting the wall time upper bound of the clock. The clock does not generate a wall time greater than the persisted timestamp and will panic if it sees a wall time greater than this value. When cockroach starts, it waits for the wall time to catch-up till this persisted timestamp. This guarantees monotonic wall time across server restarts. Not setting this or setting a value of 0 disables this feature.</td></tr>
<tr><td><code><a name="setting-server-consistency_check-max_rate"></a>server.consistency_check.max_rate</code></td><td>byte size</td><td><code>8.0 MiB</code></td><td>the rate limit (bytes/sec) to use for consistency checks; used in conjunction with server.consistency_check.interval to control the frequency of consistency checks. Note that setting this too high can negatively impact performance.</td></tr>
<tr><td><code><a name="setting-server-eventlog-enabled"></a>server.eventlog.enabled</code></td><td>boolean</td><td><code>true</code></td><td>if set, logged notable events are also stored in the table system.eventlog</td></tr>
<tr><td><code><a name="setting-server-eventlog-ttl"></a>server.eventlog.ttl</code></td><td>duration</td><td><code>2160h0m0s</code></td><td>if nonzero, entries in system.eventlog older than this duration are deleted every 10m0s. Should not be lowered below 24 hours.</td></tr>
<tr><td><code><a name="setting-server-host_based_authentication-configuration"></a>server.host_based_authentication.configuration</code></td><td>string</td><td><code></code></td><td>host-based authentication configuration to use during connection authentication</td></tr>
<tr><td><code><a name="setting-server-hsts-enabled"></a>server.hsts.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if true, HSTS headers will be sent along with all HTTP requests. The headers will contain a max-age setting of one year. Browsers honoring the header will always use HTTPS to access the DB Console. Ensure that TLS is correctly configured prior to enabling.</td></tr>
<tr><td><code><a name="setting-server-identity_map-configuration"></a>server.identity_map.configuration</code></td><td>string</td><td><code></code></td><td>system-identity to database-username mappings</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-autologin"></a>server.oidc_authentication.autologin</code></td><td>boolean</td><td><code>false</code></td><td>if true, logged-out visitors to the DB Console will be automatically redirected to the OIDC login endpoint (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-button_text"></a>server.oidc_authentication.button_text</code></td><td>string</td><td><code>Login with your OIDC provider</code></td><td>text to show on button on DB Console login page to login with your OIDC provider (only shown if OIDC is enabled) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-claim_json_key"></a>server.oidc_authentication.claim_json_key</code></td><td>string</td><td><code></code></td><td>sets JSON key of principal to extract from payload after OIDC authentication completes (usually email or sid) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-client_id"></a>server.oidc_authentication.client_id</code></td><td>string</td><td><code></code></td><td>sets OIDC client id (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-client_secret"></a>server.oidc_authentication.client_secret</code></td><td>string</td><td><code></code></td><td>sets OIDC client secret (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-enabled"></a>server.oidc_authentication.enabled</code></td><td>boolean</td><td><code>false</code></td><td>enables or disabled OIDC login for the DB Console (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-principal_regex"></a>server.oidc_authentication.principal_regex</code></td><td>string</td><td><code>(.+)</code></td><td>regular expression to apply to extracted principal (see claim_json_key setting) to translate to SQL user (golang regex format, must include 1 grouping to extract) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-provider_url"></a>server.oidc_authentication.provider_url</code></td><td>string</td><td><code></code></td><td>sets OIDC provider URL ({provider_url}/.well-known/openid-configuration must resolve) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-redirect_url"></a>server.oidc_authentication.redirect_url</code></td><td>string</td><td><code>https://localhost:8080/oidc/v1/callback</code></td><td>sets OIDC redirect URL via a URL string or a JSON string containing a required redirect_urls key with an object that maps from region keys to URL strings (URLs should point to your load balancer and must route to the path /oidc/v1/callback) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-oidc_authentication-scopes"></a>server.oidc_authentication.scopes</code></td><td>string</td><td><code>openid</code></td><td>sets OIDC scopes to include with authentication request (space delimited list of strings, required to start with openid) (this feature is experimental)</td></tr>
<tr><td><code><a name="setting-server-rangelog-ttl"></a>server.rangelog.ttl</code></td><td>duration</td><td><code>720h0m0s</code></td><td>if nonzero, range log entries older than this duration are deleted every 10m0s. Should not be lowered below 24 hours.</td></tr>
<tr><td><code><a name="setting-server-shutdown-drain_wait"></a>server.shutdown.drain_wait</code></td><td>duration</td><td><code>0s</code></td><td>the amount of time a server waits in an unready state before proceeding with the rest of the shutdown process (note that the --drain-wait parameter for cockroach node drain may need adjustment after changing this setting)</td></tr>
<tr><td><code><a name="setting-server-shutdown-lease_transfer_wait"></a>server.shutdown.lease_transfer_wait</code></td><td>duration</td><td><code>5s</code></td><td>the amount of time a server waits to transfer range leases before proceeding with the rest of the shutdown process (note that the --drain-wait parameter for cockroach node drain may need adjustment after changing this setting)</td></tr>
<tr><td><code><a name="setting-server-shutdown-query_wait"></a>server.shutdown.query_wait</code></td><td>duration</td><td><code>10s</code></td><td>the server will wait for at least this amount of time for active queries to finish (note that the --drain-wait parameter for cockroach node drain may need adjustment after changing this setting)</td></tr>
<tr><td><code><a name="setting-server-time_until_store_dead"></a>server.time_until_store_dead</code></td><td>duration</td><td><code>5m0s</code></td><td>the time after which if there is no new gossiped information about a store, it is considered dead</td></tr>
<tr><td><code><a name="setting-server-user_login-store_client_pre_hashed_passwords-enabled"></a>server.user_login.store_client_pre_hashed_passwords.enabled</code></td><td>boolean</td><td><code>false</code></td><td>whether the server accepts to store passwords pre-hashed by clients</td></tr>
<tr><td><code><a name="setting-server-user_login-timeout"></a>server.user_login.timeout</code></td><td>duration</td><td><code>10s</code></td><td>timeout after which client authentication times out if some system range is unavailable (0 = no timeout)</td></tr>
<tr><td><code><a name="setting-server-web_session-auto_logout-timeout"></a>server.web_session.auto_logout.timeout</code></td><td>duration</td><td><code>168h0m0s</code></td><td>the duration that web sessions will survive before being periodically purged, since they were last used</td></tr>
<tr><td><code><a name="setting-server-web_session-purge-max_deletions_per_cycle"></a>server.web_session.purge.max_deletions_per_cycle</code></td><td>integer</td><td><code>10</code></td><td>the maximum number of old sessions to delete for each purge</td></tr>
<tr><td><code><a name="setting-server-web_session-purge-period"></a>server.web_session.purge.period</code></td><td>duration</td><td><code>1h0m0s</code></td><td>the time until old sessions are deleted</td></tr>
<tr><td><code><a name="setting-server-web_session-purge-ttl"></a>server.web_session.purge.ttl</code></td><td>duration</td><td><code>1h0m0s</code></td><td>if nonzero, entries in system.web_sessions older than this duration are periodically purged</td></tr>
<tr><td><code><a name="setting-server-web_session_timeout"></a>server.web_session_timeout</code></td><td>duration</td><td><code>168h0m0s</code></td><td>the duration that a newly created web session will be valid</td></tr>
<tr><td><code><a name="setting-sql-auth-resolve_membership_single_scan-enabled"></a>sql.auth.resolve_membership_single_scan.enabled</code></td><td>boolean</td><td><code>false</code></td><td>determines whether to populate the role membership cache with a single scan</td></tr>
<tr><td><code><a name="setting-sql-cross_db_fks-enabled"></a>sql.cross_db_fks.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if true, creating foreign key references across databases is allowed</td></tr>
<tr><td><code><a name="setting-sql-cross_db_sequence_owners-enabled"></a>sql.cross_db_sequence_owners.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if true, creating sequences owned by tables from other databases is allowed</td></tr>
<tr><td><code><a name="setting-sql-cross_db_views-enabled"></a>sql.cross_db_views.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if true, creating views that refer to other databases is allowed</td></tr>
<tr><td><code><a name="setting-sql-defaults-copy_partitioning_when_deinterleaving_table-enabled"></a>sql.defaults.copy_partitioning_when_deinterleaving_table.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for enable_copying_partitioning_when_deinterleaving_table session variable</td></tr>
<tr><td><code><a name="setting-sql-defaults-datestyle"></a>sql.defaults.datestyle</code></td><td>enumeration</td><td><code>iso, mdy</code></td><td>default value for DateStyle session setting [iso, mdy = 0, iso, dmy = 1, iso, ymd = 2]</td></tr>
<tr><td><code><a name="setting-sql-defaults-datestyle-enabled"></a>sql.defaults.datestyle.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for datestyle_enabled session setting</td></tr>
<tr><td><code><a name="setting-sql-defaults-default_int_size"></a>sql.defaults.default_int_size</code></td><td>integer</td><td><code>8</code></td><td>the size, in bytes, of an INT type</td></tr>
<tr><td><code><a name="setting-sql-defaults-disallow_full_table_scans-enabled"></a>sql.defaults.disallow_full_table_scans.enabled</code></td><td>boolean</td><td><code>false</code></td><td>setting to true rejects queries that have planned a full table scan</td></tr>
<tr><td><code><a name="setting-sql-defaults-distsql"></a>sql.defaults.distsql</code></td><td>enumeration</td><td><code>auto</code></td><td>default distributed SQL execution mode [off = 0, auto = 1, on = 2]</td></tr>
<tr><td><code><a name="setting-sql-defaults-drop_enum_value-enabled"></a>sql.defaults.drop_enum_value.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for enable_drop_enum_value; allows for dropping enum values</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_alter_column_type-enabled"></a>sql.defaults.experimental_alter_column_type.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_alter_column_type session setting; enables the use of ALTER COLUMN TYPE for general conversions</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_auto_rehoming-enabled"></a>sql.defaults.experimental_auto_rehoming.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_enable_auto_rehoming; allows for rows in REGIONAL BY ROW tables to be auto-rehomed on UPDATE</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_distsql_planning"></a>sql.defaults.experimental_distsql_planning</code></td><td>enumeration</td><td><code>off</code></td><td>default experimental_distsql_planning mode; enables experimental opt-driven DistSQL planning [off = 0, on = 1]</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_enable_unique_without_index_constraints-enabled"></a>sql.defaults.experimental_enable_unique_without_index_constraints.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_enable_unique_without_index_constraints session setting;disables unique without index constraints by default</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_hash_sharded_indexes-enabled"></a>sql.defaults.experimental_hash_sharded_indexes.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_enable_hash_sharded_indexes; allows for creation of hash sharded indexes by default</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_implicit_column_partitioning-enabled"></a>sql.defaults.experimental_implicit_column_partitioning.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_enable_temp_tables; allows for the use of implicit column partitioning</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_new_schema_changer-enabled"></a>sql.defaults.experimental_new_schema_changer.enabled</code></td><td>enumeration</td><td><code>off</code></td><td>default value for experimental_use_new_schema_changer session setting;disables new schema changer by default [off = 0, on = 1, unsafe_always = 2]</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_stream_replication-enabled"></a>sql.defaults.experimental_stream_replication.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_stream_replication session setting;enables the ability to setup a replication stream</td></tr>
<tr><td><code><a name="setting-sql-defaults-experimental_temporary_tables-enabled"></a>sql.defaults.experimental_temporary_tables.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for experimental_enable_temp_tables; allows for use of temporary tables by default</td></tr>
<tr><td><code><a name="setting-sql-defaults-foreign_key_cascades_limit"></a>sql.defaults.foreign_key_cascades_limit</code></td><td>integer</td><td><code>10000</code></td><td>default value for foreign_key_cascades_limit session setting; limits the number of cascading operations that run as part of a single query</td></tr>
<tr><td><code><a name="setting-sql-defaults-idle_in_session_timeout"></a>sql.defaults.idle_in_session_timeout</code></td><td>duration</td><td><code>0s</code></td><td>default value for the idle_in_session_timeout; default value for the idle_in_session_timeout session setting; controls the duration a session is permitted to idle before the session is terminated; if set to 0, there is no timeout</td></tr>
<tr><td><code><a name="setting-sql-defaults-idle_in_transaction_session_timeout"></a>sql.defaults.idle_in_transaction_session_timeout</code></td><td>duration</td><td><code>0s</code></td><td>default value for the idle_in_transaction_session_timeout; controls the duration a session is permitted to idle in a transaction before the session is terminated; if set to 0, there is no timeout</td></tr>
<tr><td><code><a name="setting-sql-defaults-implicit_select_for_update-enabled"></a>sql.defaults.implicit_select_for_update.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for enable_implicit_select_for_update session setting; enables FOR UPDATE locking during the row-fetch phase of mutation statements</td></tr>
<tr><td><code><a name="setting-sql-defaults-insert_fast_path-enabled"></a>sql.defaults.insert_fast_path.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for enable_insert_fast_path session setting; enables a specialized insert path</td></tr>
<tr><td><code><a name="setting-sql-defaults-interleaved_tables-enabled"></a>sql.defaults.interleaved_tables.enabled</code></td><td>boolean</td><td><code>false</code></td><td>allows creation of interleaved tables or indexes</td></tr>
<tr><td><code><a name="setting-sql-defaults-intervalstyle"></a>sql.defaults.intervalstyle</code></td><td>enumeration</td><td><code>postgres</code></td><td>default value for IntervalStyle session setting [postgres = 0, iso_8601 = 1, sql_standard = 2]</td></tr>
<tr><td><code><a name="setting-sql-defaults-intervalstyle-enabled"></a>sql.defaults.intervalstyle.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for intervalstyle_enabled session setting</td></tr>
<tr><td><code><a name="setting-sql-defaults-large_full_scan_rows"></a>sql.defaults.large_full_scan_rows</code></td><td>float</td><td><code>1000</code></td><td>default value for large_full_scan_rows session setting which determines the maximum table size allowed for a full scan when disallow_full_table_scans is set to true</td></tr>
<tr><td><code><a name="setting-sql-defaults-locality_optimized_partitioned_index_scan-enabled"></a>sql.defaults.locality_optimized_partitioned_index_scan.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for locality_optimized_partitioned_index_scan session setting; enables searching for rows in the current region before searching remote regions</td></tr>
<tr><td><code><a name="setting-sql-defaults-lock_timeout"></a>sql.defaults.lock_timeout</code></td><td>duration</td><td><code>0s</code></td><td>default value for the lock_timeout; default value for the lock_timeout session setting; controls the duration a query is permitted to wait while attempting to acquire a lock on a key or while blocking on an existing lock in order to perform a non-locking read on a key; if set to 0, there is no timeout</td></tr>
<tr><td><code><a name="setting-sql-defaults-on_update_rehome_row-enabled"></a>sql.defaults.on_update_rehome_row.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for on_update_rehome_row; enables ON UPDATE rehome_row() expressions to trigger on updates</td></tr>
<tr><td><code><a name="setting-sql-defaults-optimizer_use_histograms-enabled"></a>sql.defaults.optimizer_use_histograms.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for optimizer_use_histograms session setting; enables usage of histograms in the optimizer by default</td></tr>
<tr><td><code><a name="setting-sql-defaults-optimizer_use_multicol_stats-enabled"></a>sql.defaults.optimizer_use_multicol_stats.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for optimizer_use_multicol_stats session setting; enables usage of multi-column stats in the optimizer by default</td></tr>
<tr><td><code><a name="setting-sql-defaults-override_multi_region_zone_config-enabled"></a>sql.defaults.override_multi_region_zone_config.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for override_multi_region_zone_config; allows for overriding the zone configs of a multi-region table or database</td></tr>
<tr><td><code><a name="setting-sql-defaults-prefer_lookup_joins_for_fks-enabled"></a>sql.defaults.prefer_lookup_joins_for_fks.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for prefer_lookup_joins_for_fks session setting; causes foreign key operations to use lookup joins when possible</td></tr>
<tr><td><code><a name="setting-sql-defaults-primary_region"></a>sql.defaults.primary_region</code></td><td>string</td><td><code></code></td><td>if not empty, all databases created without a PRIMARY REGION will implicitly have the given PRIMARY REGION</td></tr>
<tr><td><code><a name="setting-sql-defaults-reorder_joins_limit"></a>sql.defaults.reorder_joins_limit</code></td><td>integer</td><td><code>8</code></td><td>default number of joins to reorder</td></tr>
<tr><td><code><a name="setting-sql-defaults-require_explicit_primary_keys-enabled"></a>sql.defaults.require_explicit_primary_keys.enabled</code></td><td>boolean</td><td><code>false</code></td><td>default value for requiring explicit primary keys in CREATE TABLE statements</td></tr>
<tr><td><code><a name="setting-sql-defaults-results_buffer-size"></a>sql.defaults.results_buffer.size</code></td><td>byte size</td><td><code>16 KiB</code></td><td>default size of the buffer that accumulates results for a statement or a batch of statements before they are sent to the client. This can be overridden on an individual connection with the 'results_buffer_size' parameter. Note that auto-retries generally only happen while no results have been delivered to the client, so reducing this size can increase the number of retriable errors a client receives. On the other hand, increasing the buffer size can increase the delay until the client receives the first result row. Updating the setting only affects new connections. Setting to 0 disables any buffering.</td></tr>
<tr><td><code><a name="setting-sql-defaults-serial_normalization"></a>sql.defaults.serial_normalization</code></td><td>enumeration</td><td><code>rowid</code></td><td>default handling of SERIAL in table definitions [rowid = 0, virtual_sequence = 1, sql_sequence = 2, sql_sequence_cached = 3]</td></tr>
<tr><td><code><a name="setting-sql-defaults-statement_timeout"></a>sql.defaults.statement_timeout</code></td><td>duration</td><td><code>0s</code></td><td>default value for the statement_timeout; default value for the statement_timeout session setting; controls the duration a query is permitted to run before it is canceled; if set to 0, there is no timeout</td></tr>
<tr><td><code><a name="setting-sql-defaults-stub_catalog_tables-enabled"></a>sql.defaults.stub_catalog_tables.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for stub_catalog_tables session setting</td></tr>
<tr><td><code><a name="setting-sql-defaults-transaction_rows_read_err"></a>sql.defaults.transaction_rows_read_err</code></td><td>integer</td><td><code>0</code></td><td>the limit for the number of rows read by a SQL transaction which - once exceeded - will fail the transaction (or will trigger a logging event to SQL_INTERNAL_PERF for internal transactions); use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-defaults-transaction_rows_read_log"></a>sql.defaults.transaction_rows_read_log</code></td><td>integer</td><td><code>0</code></td><td>the threshold for the number of rows read by a SQL transaction which - once exceeded - will trigger a logging event to SQL_PERF (or SQL_INTERNAL_PERF for internal transactions); use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-defaults-transaction_rows_written_err"></a>sql.defaults.transaction_rows_written_err</code></td><td>integer</td><td><code>0</code></td><td>the limit for the number of rows written by a SQL transaction which - once exceeded - will fail the transaction (or will trigger a logging event to SQL_INTERNAL_PERF for internal transactions); use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-defaults-transaction_rows_written_log"></a>sql.defaults.transaction_rows_written_log</code></td><td>integer</td><td><code>0</code></td><td>the threshold for the number of rows written by a SQL transaction which - once exceeded - will trigger a logging event to SQL_PERF (or SQL_INTERNAL_PERF for internal transactions); use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-defaults-vectorize"></a>sql.defaults.vectorize</code></td><td>enumeration</td><td><code>on</code></td><td>default vectorize mode [on = 0, on = 2, experimental_always = 3, off = 4]</td></tr>
<tr><td><code><a name="setting-sql-defaults-zigzag_join-enabled"></a>sql.defaults.zigzag_join.enabled</code></td><td>boolean</td><td><code>true</code></td><td>default value for enable_zigzag_join session setting; allows use of zig-zag join by default</td></tr>
<tr><td><code><a name="setting-sql-distsql-max_running_flows"></a>sql.distsql.max_running_flows</code></td><td>integer</td><td><code>-128</code></td><td>the value - when positive - used as is, or the value - when negative - multiplied by the number of CPUs on a node, to determine the maximum number of concurrent remote flows that can be run on the node</td></tr>
<tr><td><code><a name="setting-sql-distsql-temp_storage-workmem"></a>sql.distsql.temp_storage.workmem</code></td><td>byte size</td><td><code>64 MiB</code></td><td>maximum amount of memory in bytes a processor can use before falling back to temp storage</td></tr>
<tr><td><code><a name="setting-sql-guardrails-max_row_size_err"></a>sql.guardrails.max_row_size_err</code></td><td>byte size</td><td><code>512 MiB</code></td><td>maximum size of row (or column family if multiple column families are in use) that SQL can write to the database, above which an error is returned; use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-guardrails-max_row_size_log"></a>sql.guardrails.max_row_size_log</code></td><td>byte size</td><td><code>64 MiB</code></td><td>maximum size of row (or column family if multiple column families are in use) that SQL can write to the database, above which an event is logged to SQL_PERF (or SQL_INTERNAL_PERF if the mutating statement was internal); use 0 to disable</td></tr>
<tr><td><code><a name="setting-sql-hash_sharded_range_pre_split-max"></a>sql.hash_sharded_range_pre_split.max</code></td><td>integer</td><td><code>16</code></td><td>max pre-split ranges to have when adding hash sharded index to an existing table</td></tr>
<tr><td><code><a name="setting-sql-log-slow_query-experimental_full_table_scans-enabled"></a>sql.log.slow_query.experimental_full_table_scans.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when set to true, statements that perform a full table/index scan will be logged to the slow query log even if they do not meet the latency threshold. Must have the slow query log enabled for this setting to have any effect.</td></tr>
<tr><td><code><a name="setting-sql-log-slow_query-internal_queries-enabled"></a>sql.log.slow_query.internal_queries.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when set to true, internal queries which exceed the slow query log threshold are logged to a separate log. Must have the slow query log enabled for this setting to have any effect.</td></tr>
<tr><td><code><a name="setting-sql-log-slow_query-latency_threshold"></a>sql.log.slow_query.latency_threshold</code></td><td>duration</td><td><code>0s</code></td><td>when set to non-zero, log statements whose service latency exceeds the threshold to a secondary logger on each node</td></tr>
<tr><td><code><a name="setting-sql-metrics-index_usage_stats-enabled"></a>sql.metrics.index_usage_stats.enabled</code></td><td>boolean</td><td><code>true</code></td><td>collect per index usage statistics</td></tr>
<tr><td><code><a name="setting-sql-metrics-max_mem_reported_stmt_fingerprints"></a>sql.metrics.max_mem_reported_stmt_fingerprints</code></td><td>integer</td><td><code>100000</code></td><td>the maximum number of reported statement fingerprints stored in memory</td></tr>
<tr><td><code><a name="setting-sql-metrics-max_mem_reported_txn_fingerprints"></a>sql.metrics.max_mem_reported_txn_fingerprints</code></td><td>integer</td><td><code>100000</code></td><td>the maximum number of reported transaction fingerprints stored in memory</td></tr>
<tr><td><code><a name="setting-sql-metrics-max_mem_stmt_fingerprints"></a>sql.metrics.max_mem_stmt_fingerprints</code></td><td>integer</td><td><code>100000</code></td><td>the maximum number of statement fingerprints stored in memory</td></tr>
<tr><td><code><a name="setting-sql-metrics-max_mem_txn_fingerprints"></a>sql.metrics.max_mem_txn_fingerprints</code></td><td>integer</td><td><code>100000</code></td><td>the maximum number of transaction fingerprints stored in memory</td></tr>
<tr><td><code><a name="setting-sql-metrics-statement_details-dump_to_logs"></a>sql.metrics.statement_details.dump_to_logs</code></td><td>boolean</td><td><code>false</code></td><td>dump collected statement statistics to node logs when periodically cleared</td></tr>
<tr><td><code><a name="setting-sql-metrics-statement_details-enabled"></a>sql.metrics.statement_details.enabled</code></td><td>boolean</td><td><code>true</code></td><td>collect per-statement query statistics</td></tr>
<tr><td><code><a name="setting-sql-metrics-statement_details-plan_collection-enabled"></a>sql.metrics.statement_details.plan_collection.enabled</code></td><td>boolean</td><td><code>true</code></td><td>periodically save a logical plan for each fingerprint</td></tr>
<tr><td><code><a name="setting-sql-metrics-statement_details-plan_collection-period"></a>sql.metrics.statement_details.plan_collection.period</code></td><td>duration</td><td><code>5m0s</code></td><td>the time until a new logical plan is collected</td></tr>
<tr><td><code><a name="setting-sql-metrics-statement_details-threshold"></a>sql.metrics.statement_details.threshold</code></td><td>duration</td><td><code>0s</code></td><td>minimum execution time to cause statement statistics to be collected. If configured, no transaction stats are collected.</td></tr>
<tr><td><code><a name="setting-sql-metrics-transaction_details-enabled"></a>sql.metrics.transaction_details.enabled</code></td><td>boolean</td><td><code>true</code></td><td>collect per-application transaction statistics</td></tr>
<tr><td><code><a name="setting-sql-multiple_modifications_of_table-enabled"></a>sql.multiple_modifications_of_table.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if true, allow statements containing multiple INSERT ON CONFLICT, UPSERT, UPDATE, or DELETE subqueries modifying the same table, at the risk of data corruption if the same row is modified multiple times by a single statement (multiple INSERT subqueries without ON CONFLICT cannot cause corruption and are always allowed)</td></tr>
<tr><td><code><a name="setting-sql-multiregion-drop_primary_region-enabled"></a>sql.multiregion.drop_primary_region.enabled</code></td><td>boolean</td><td><code>true</code></td><td>allows dropping the PRIMARY REGION of a database if it is the last region</td></tr>
<tr><td><code><a name="setting-sql-notices-enabled"></a>sql.notices.enabled</code></td><td>boolean</td><td><code>true</code></td><td>enable notices in the server/client protocol being sent</td></tr>
<tr><td><code><a name="setting-sql-optimizer-uniqueness_checks_for_gen_random_uuid-enabled"></a>sql.optimizer.uniqueness_checks_for_gen_random_uuid.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if enabled, uniqueness checks may be planned for mutations of UUID columns updated with gen_random_uuid(); otherwise, uniqueness is assumed due to near-zero collision probability</td></tr>
<tr><td><code><a name="setting-sql-spatial-experimental_box2d_comparison_operators-enabled"></a>sql.spatial.experimental_box2d_comparison_operators.enabled</code></td><td>boolean</td><td><code>false</code></td><td>enables the use of certain experimental box2d comparison operators</td></tr>
<tr><td><code><a name="setting-sql-stats-automatic_collection-enabled"></a>sql.stats.automatic_collection.enabled</code></td><td>boolean</td><td><code>true</code></td><td>automatic statistics collection mode</td></tr>
<tr><td><code><a name="setting-sql-stats-automatic_collection-fraction_stale_rows"></a>sql.stats.automatic_collection.fraction_stale_rows</code></td><td>float</td><td><code>0.2</code></td><td>target fraction of stale rows per table that will trigger a statistics refresh</td></tr>
<tr><td><code><a name="setting-sql-stats-automatic_collection-min_stale_rows"></a>sql.stats.automatic_collection.min_stale_rows</code></td><td>integer</td><td><code>500</code></td><td>target minimum number of stale rows per table that will trigger a statistics refresh</td></tr>
<tr><td><code><a name="setting-sql-stats-cleanup-recurrence"></a>sql.stats.cleanup.recurrence</code></td><td>string</td><td><code>@hourly</code></td><td>cron-tab recurrence for SQL Stats cleanup job</td></tr>
<tr><td><code><a name="setting-sql-stats-flush-enabled"></a>sql.stats.flush.enabled</code></td><td>boolean</td><td><code>true</code></td><td>if set, SQL execution statistics are periodically flushed to disk</td></tr>
<tr><td><code><a name="setting-sql-stats-flush-interval"></a>sql.stats.flush.interval</code></td><td>duration</td><td><code>10m0s</code></td><td>the interval at which SQL execution statistics are flushed to disk, this value must be less than or equal to sql.stats.aggregation.interval</td></tr>
<tr><td><code><a name="setting-sql-stats-histogram_collection-enabled"></a>sql.stats.histogram_collection.enabled</code></td><td>boolean</td><td><code>true</code></td><td>histogram collection mode</td></tr>
<tr><td><code><a name="setting-sql-stats-multi_column_collection-enabled"></a>sql.stats.multi_column_collection.enabled</code></td><td>boolean</td><td><code>true</code></td><td>multi-column statistics collection mode</td></tr>
<tr><td><code><a name="setting-sql-stats-persisted_rows-max"></a>sql.stats.persisted_rows.max</code></td><td>integer</td><td><code>1000000</code></td><td>maximum number of rows of statement and transaction statistics that will be persisted in the system tables</td></tr>
<tr><td><code><a name="setting-sql-stats-post_events-enabled"></a>sql.stats.post_events.enabled</code></td><td>boolean</td><td><code>false</code></td><td>if set, an event is logged for every CREATE STATISTICS job</td></tr>
<tr><td><code><a name="setting-sql-stats-response-max"></a>sql.stats.response.max</code></td><td>integer</td><td><code>20000</code></td><td>the maximum number of statements and transaction stats returned in a CombinedStatements request</td></tr>
<tr><td><code><a name="setting-sql-telemetry-capture_index_usage_stats-enabled"></a>sql.telemetry.capture_index_usage_stats.enabled</code></td><td>boolean</td><td><code>true</code></td><td>enable/disable capturing index usage statistics to the telemetry logging channel</td></tr>
<tr><td><code><a name="setting-sql-telemetry-query_sampling-enabled"></a>sql.telemetry.query_sampling.enabled</code></td><td>boolean</td><td><code>false</code></td><td>when set to true, executed queries will emit an event on the telemetry logging channel</td></tr>
<tr><td><code><a name="setting-sql-temp_object_cleaner-cleanup_interval"></a>sql.temp_object_cleaner.cleanup_interval</code></td><td>duration</td><td><code>30m0s</code></td><td>how often to clean up orphaned temporary objects</td></tr>
<tr><td><code><a name="setting-sql-temp_object_cleaner-wait_interval"></a>sql.temp_object_cleaner.wait_interval</code></td><td>duration</td><td><code>30m0s</code></td><td>how long after creation a temporary object will be cleaned up</td></tr>
<tr><td><code><a name="setting-sql-trace-log_statement_execute"></a>sql.trace.log_statement_execute</code></td><td>boolean</td><td><code>false</code></td><td>set to true to enable logging of executed statements</td></tr>
<tr><td><code><a name="setting-sql-trace-session_eventlog-enabled"></a>sql.trace.session_eventlog.enabled</code></td><td>boolean</td><td><code>false</code></td><td>set to true to enable session tracing. Note that enabling this may have a non-trivial negative performance impact.</td></tr>
<tr><td><code><a name="setting-sql-trace-stmt-enable_threshold"></a>sql.trace.stmt.enable_threshold</code></td><td>duration</td><td><code>0s</code></td><td>duration beyond which all statements are traced (set to 0 to disable). This applies to individual statements within a transaction and is therefore finer-grained than sql.trace.txn.enable_threshold.</td></tr>
<tr><td><code><a name="setting-sql-trace-txn-enable_threshold"></a>sql.trace.txn.enable_threshold</code></td><td>duration</td><td><code>0s</code></td><td>duration beyond which all transactions are traced (set to 0 to disable). This setting is coarser grained thansql.trace.stmt.enable_threshold because it applies to all statements within a transaction as well as client communication (e.g. retries).</td></tr>
<tr><td><code><a name="setting-timeseries-storage-enabled"></a>timeseries.storage.enabled</code></td><td>boolean</td><td><code>true</code></td><td>if set, periodic timeseries data is stored within the cluster; disabling is not recommended unless you are storing the data elsewhere</td></tr>
<tr><td><code><a name="setting-timeseries-storage-resolution_10s-ttl"></a>timeseries.storage.resolution_10s.ttl</code></td><td>duration</td><td><code>240h0m0s</code></td><td>the maximum age of time series data stored at the 10 second resolution. Data older than this is subject to rollup and deletion.</td></tr>
<tr><td><code><a name="setting-timeseries-storage-resolution_30m-ttl"></a>timeseries.storage.resolution_30m.ttl</code></td><td>duration</td><td><code>2160h0m0s</code></td><td>the maximum age of time series data stored at the 30 minute resolution. Data older than this is subject to deletion.</td></tr>
<tr><td><code><a name="setting-trace-datadog-agent"></a>trace.datadog.agent</code></td><td>string</td><td><code></code></td><td>if set, traces will be sent to this DataDog agent; use &lthost&gt:&ltport&gt or "default" for localhost:8126. Only one tracer can be configured at a time.</td></tr>
<tr><td><code><a name="setting-trace-datadog-project"></a>trace.datadog.project</code></td><td>string</td><td><code>CockroachDB</code></td><td>the project under which traces will be reported to the DataDog agent if trace.datadog.agent is set. Only one tracer can be configured at a time.</td></tr>
<tr><td><code><a name="setting-trace-debug-enable"></a>trace.debug.enable</code></td><td>boolean</td><td><code>false</code></td><td>if set, traces for recent requests can be seen at https://&ltui&gt/debug/requests</td></tr>
<tr><td><code><a name="setting-trace-lightstep-token"></a>trace.lightstep.token</code></td><td>string</td><td><code></code></td><td>if set, traces go to Lightstep using this token</td></tr>
<tr><td><code><a name="setting-trace-zipkin-collector"></a>trace.zipkin.collector</code></td><td>string</td><td><code></code></td><td>if set, traces go to the given Zipkin instance (example: '127.0.0.1:9411'). Only one tracer can be configured at a time.</td></tr>
<tr><td><code><a name="setting-version"></a>version</code></td><td>version</td><td><code>21.2</code></td><td>set the active cluster version in the format '&ltmajor&gt.&ltminor&gt'</td></tr>
</tbody>
</table>
